--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,13 +1,26 @@
 doctype html
 html
   head
-    title= title
+    <!--API Google Sheets-->
+    script(src='/javascripts/main.js')
     link(rel='stylesheet', href='/stylesheets/style.css')
     <!-- Bootstrap CSS -->
     link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T', crossorigin='anonymous')
     <!-- jQuery -->
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js')
-  body
+    body
+      nav.navbar.navbar-expand-lg.navbar-light(style='background-color: #0F5076;')
+        a.navbar-brand(href='/') WORLDPASS CONCIERGE
+        button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarNavAltMarkup', aria-controls='navbarNavAltMarkup', aria-expanded='false', aria-label='Toggle navigation')
+          span.navbar-toggler-icon
+        #navbarNavAltMarkup.collapse.navbar-collapse
+          .navbar-nav
+            a.nav-item.nav-link(href='/hotels')
+              | Hotels 
+              span.sr-only (current)
+            a.nav-item.nav-link(href='/cars') Cars
+            a.nav-item.nav-link(href='/insurances') Insurances
+            a.nav-item.nav-link(href='/tours') Insurances
     block content
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
