ya huele a domingo!!!

--- a/views/insurances.pug
+++ b/views/insurances.pug
@@ -14,14 +14,17 @@ block content
   table.table.table-bordered
     thead
       tr
-        th(scope='col') RESERVED FOR
-        th(scope='col') CAR RENTAL IN
-        th(scope='col') ITINERARY
-        th(scope='col') BOOKING REFERENCE
-        th(scope='col') INFORMATION
-        th(scope='col') PICKUP
-        th(scope='col') DROP OFF
-        th(scope='col') ADITIONAL CAR SERVICES
+        th(scope='col') VOUCHER
+        th(scope='col') DATE ISSUED
+        th(scope='col') PRODUCT
+        th(scope='col') BENEFICIARY
+        th(scope='col') DATEOF BIRTH
+        th(scope='col') ID Passport
+        th(scope='col') Mr. Ms.
+        th(scope='col') PHONE NUMBER
+        th(scope='col') AGENT
+        th(scope='col') CONTROL
+        th(scope='col') AMOUNT
         th(scope='col') CREATE PDF
     tbody#tbody
 
