--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,15 +16,14 @@ html
         #navbarNavAltMarkup.collapse.navbar-collapse
           .navbar-nav
             a.nav-item.nav-link(href='/hotels')
-              | Hotels 
+              | Hotels
               span.sr-only (current)
             a.nav-item.nav-link(href='/cars') Cars
             a.nav-item.nav-link(href='/insurances') Insurances
-            a.nav-item.nav-link(href='/tours') Insurances
+            a.nav-item.nav-link(href='/tours') Tours
     block content
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js', integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1', crossorigin='anonymous')
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js', integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM', crossorigin='anonymous')
-    
